--- a/index.ipynb
+++ b/index.ipynb
@@ -194,7 +194,7 @@
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    pass\n",
-    " if len restaurant[\"rating\"] > alternative[\"rating\"]:\n",
+    " if len restaurant[\"p\"] > alternative[\"rating\"]:\n",
     "        return restaurant\n",
     "    else: \n",
     "        return alternative"
