--- a/index.ipynb
+++ b/index.ipynb
@@ -188,13 +188,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    if len restaurant[\"price\"] < len alternative[\"rating\"]:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    pass\n",
-    " if len restaurant[\"price\"] < len alternative[\"rating\"]:\n",
+    " if len ''9restaurant[\"price\"] < len alternative[\"rating\"]:\n",
     "        return restaurant\n",
     "    else: \n",
     "        return alternative"
