Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -203,7 +203,7 @@
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    pass\n",
-    " if len (restaurant[\"price\"]) < len(alternative[\"rating\"]):\n",
+    " if len(restaurant[\"price\"]) < len(alternative[]):\n",
     "        return restaurant\n",
     "    else: \n",
     "        return alternative"
