--- a/index.ipynb
+++ b/index.ipynb
@@ -188,21 +188,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 3)",
+     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    if len(restaurant[\"price\"]) < len(alternative[\"price\"]):\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
      ]
     }
    ],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    pass\n",
+    "    \n",
     " if len(restaurant[\"price\"]) < len(alternative[\"price\"]):\n",
     "        return restaurant\n",
     "    else: \n",
