--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    for open in restau\n",
+    "    for open in restaurants\n",
     "    pass"
    ]
   },
