--- a/index.ipynb
+++ b/index.ipynb
@@ -290,6 +290,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for open in restaurants:\n",
+    "        if res\n",
     "    pass"
    ]
   },
