--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for open in restaurants:\n",
-    "        if restaurant[is_closed]    pass"
+    "        if restaurant[is_closed] = falpass"
    ]
   },
   {
