Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -290,7 +290,8 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for open in restaurants:\n",
-    "        if restaurant[is_closed] = falpass"
+    "        if restaurant[is_closed] = false \n",
+    "        "
    ]
   },
   {
