--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
     "def open_restaurants(restaurants):\n",
     "    for open in restaurants:\n",
     "        if restaurant[is_closed] = false:\n",
-    "            \n",
+    "            return restau\n",
     "        "
    ]
   },
