--- a/index.ipynb
+++ b/index.ipynb
@@ -284,14 +284,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for open in restaurants:\n",
-    "        if restaurant[is_closed] = false:\n",
-    "            return restau\n",
+    "        if restaurant[is_closed] == false:\n",
+    "            return restaurants\n",
     "        "
    ]
   },
