--- a/index.ipynb
+++ b/index.ipynb
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
     "    for open in restaurants:\n",
     "        if restaurant[is_closed] == false:\n",
     "            return restaurants\n",
-    "        "
+    "        open_restaurants"
    ]
   },
   {
