Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
     "    for open in restaurants:\n",
     "        if restaurant[is_closed] == false:\n",
     "            return restaurants\n",
-    "        open_restaurants"
+    "       print open_restaurants"
    ]
   },
   {
