--- a/index.ipynb
+++ b/index.ipynb
@@ -284,15 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 5)",
+     "ename": "SyntaxError",
+     "evalue": "Missing parentheses in call to 'print'. Did you mean print(open_restaurants)? (<ipython-input-41-425f8f9038f4>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    print open_restaurants\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-41-425f8f9038f4>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    print open_restaurants\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(open_restaurants)?\n"
      ]
     }
    ],
@@ -301,7 +301,7 @@
     "    for open in restaurants:\n",
     "        if restaurant[is_closed] == false:\n",
     "            return restaurants\n",
-    "       print open_restaurants"
+    "    print open_restaurants()"
    ]
   },
   {
