--- a/index.ipynb
+++ b/index.ipynb
@@ -284,15 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "Missing parentheses in call to 'print'. Did you mean print(open_restaurants)? (<ipython-input-41-425f8f9038f4>, line 5)",
+     "evalue": "invalid syntax (<ipython-input-42-c5561d79bd89>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-41-425f8f9038f4>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    print open_restaurants\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(open_restaurants)?\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-42-c5561d79bd89>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    print open_restaurants(restaurants)\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -301,7 +301,7 @@
     "    for open in restaurants:\n",
     "        if restaurant[is_closed] == false:\n",
     "            return restaurants\n",
-    "    print open_restaurants()"
+    "    print open_restaurants(restaurants)"
    ]
   },
   {
