--- a/index.ipynb
+++ b/index.ipynb
@@ -298,7 +298,7 @@
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "   new = \n",
+    "   new = []\n",
     "for open in restaurants:\n",
     "        if restaurant[is_closed] == false:\n",
     "            return restaurants\n",
