--- a/index.ipynb
+++ b/index.ipynb
@@ -284,15 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "'return' outside function (<ipython-input-43-078d07a6ac4c>, line 5)",
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-43-078d07a6ac4c>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    return new.append([\"name\"])\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    return new.append([\"name\"])\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
      ]
     }
    ],
@@ -301,7 +301,7 @@
     "   new = []\n",
     "for open in restaurants:\n",
     "        if restaurant[is_closed] == false:\n",
-    "            return new.append([\"name\"])\n",
+    "     return new.append([\"name\"])\n",
     "    "
    ]
   },
