Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -301,7 +301,7 @@
     "   new = []\n",
     "for open in restaurants:\n",
     "        if restaurant[is_closed] == false:\n",
-    "        return new.append([\"name\"])\n",
+    "        return \n",
     "    "
    ]
   },
