--- a/index.ipynb
+++ b/index.ipynb
@@ -284,15 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-47-bc26bec9c395>, line 5)",
+     "evalue": "expected an indented block (<ipython-input-48-79e1f87e6a97>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-47-bc26bec9c395>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    return new.append([\"name\"])\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-48-79e1f87e6a97>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    return restaunts name\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -301,7 +301,7 @@
     "   new = []\n",
     "for open in restaurants:\n",
     "        if restaurant[is_closed] == false:\n",
-    "        return \n",
+    "        return restaunts name\n",
     "    "
    ]
   },
