--- a/index.ipynb
+++ b/index.ipynb
@@ -284,15 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-48-79e1f87e6a97>, line 5)",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-49-e70e38e93ed2>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-48-79e1f87e6a97>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    return restaunts name\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-49-e70e38e93ed2>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    `if restaurant[is_closed] == false:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -300,8 +300,8 @@
     "def open_restaurants(restaurants):\n",
     "   new = []\n",
     "for open in restaurants:\n",
-    "        if restaurant[is_closed] == false:\n",
-    "        return restaunts name\n",
+    "        `if restaurant[is_closed] == false:\n",
+    "            return restaunts name\n",
     "    "
    ]
   },
