Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -284,15 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-49-e70e38e93ed2>, line 4)",
+     "evalue": "'return' outside function (<ipython-input-51-7c734e496c23>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-49-e70e38e93ed2>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    `if restaurant[is_closed] == false:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-51-7c734e496c23>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    return restaunts\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
      ]
     }
    ],
@@ -300,8 +300,8 @@
     "def open_restaurants(restaurants):\n",
     "   new = []\n",
     "for open in restaurants:\n",
-    "        `if restaurant[is_closed] == false:\n",
-    "            return restaunts name\n",
+    "        if restaurant[is_closed] == false:\n",
+    "            return restaunts\n",
     "    "
    ]
   },
