--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
     "def open_restaurants(restaurants):\n",
     "   new = []\n",
     "for open in restaurants:\n",
-    "        if restaurant[is_closed] == false:\n",
+    "        if not restaurant[is_closed] == false:\n",
     "            return restaunts\n",
     "    "
    ]
