Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -299,7 +299,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "   new = []\n",
-    "for open in restaurants:\n",
+    "for restaurants in restaurants:\n",
     "        if not restaurant[is_closed] == false:\n",
     "        \n",
     "    "
