--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,8 @@
     "def open_restaurants(restaurants):\n",
     "   new = []\n",
     "for restaurants in restaurants:\n",
-    "        if not restaurant[is_closed] == false:\n",
+    "        if not restaurant[is_closed] \n",
+    "        append.new\n",
     "        \n",
     "    "
    ]
