Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -299,9 +299,9 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "   new = []\n",
-    "for restaurants in restaurants:\n",
+    "for restaurant in restaurants:\n",
     "        if not restaurant[is_closed] \n",
-    "        append.new\n",
+    "        \n",
     "        \n",
     "    "
    ]
