--- a/index.ipynb
+++ b/index.ipynb
@@ -302,7 +302,7 @@
     "for restaurant in restaurants:\n",
     "        if not restaurant[is_closed] \n",
     "        \n",
-    "        \n",
+    "        new.append \n",
     "    "
    ]
   },
