Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -300,8 +300,7 @@
     "def open_restaurants(restaurants):\n",
     "   new = []\n",
     "for restaurant in restaurants:\n",
-    "        if not restaurant[is_closed] \n",
-    "        \n",
+    "        if not restaurant[is_closed]:\n",
     "        new.append \n",
     "    "
    ]
