--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -284,15 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-53-18aa3f25a396>, line 5)",
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (<ipython-input-52-7c734e496c23>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-53-18aa3f25a396>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    new.append restaurant\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-52-7c734e496c23>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    return restaunts\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
      ]
     }
    ],
@@ -301,7 +301,7 @@
     "   new = []\n",
     "for restaurant in restaurants:\n",
     "        if not restaurant[is_closed]:\n",
-    "        new.append restaurant\n",
+    "        new.append \n",
     "    "
    ]
   },
