Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -304,7 +304,8 @@
     "   new = []\n",
     "for restaurant in restaurants:\n",
     "        if not restaurant[is_closed]:\n",
-    "            new.append /(restaurant)\n",
+    "            new.append(restaurant)\n",
+    "            return restaurant\n",
     "    "
    ]
   },
