Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -284,15 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 6)",
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (<ipython-input-59-c8f4e99f0d4e>, line 6)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    return restaurant\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-59-c8f4e99f0d4e>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    return restaurant\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
      ]
     }
    ],
@@ -302,7 +302,7 @@
     "for restaurant in restaurants:\n",
     "        if not restaurant[is_closed]:\n",
     "            new.append(restaurant)\n",
-    "         return restaurant\n",
+    "        return restaurant\n",
     "    "
    ]
   },
