--- a/index.ipynb
+++ b/index.ipynb
@@ -284,15 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "'return' outside function (<ipython-input-60-1d2fa9f1531b>, line 7)",
+     "evalue": "'return' outside function (<ipython-input-61-ec05eec69858>, line 7)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-60-1d2fa9f1531b>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    return restaurant\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-61-ec05eec69858>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    return new\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
      ]
     }
    ],
@@ -303,7 +303,7 @@
     "        if not restaurant[is_closed]:\n",
     "            new.append(restaurant)\n",
     "        \n",
-    "        return restaurant\n",
+    "    return new\n",
     "    "
    ]
   },
