--- a/index.ipynb
+++ b/index.ipynb
@@ -284,22 +284,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "'return' outside function (<ipython-input-61-ec05eec69858>, line 7)",
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 7)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-61-ec05eec69858>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    return new\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    return new\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
      ]
     }
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
     "   new = []\n",
-    "for restaurant in restaurants:\n",
+    "    for restaurant in restaurants:\n",
     "        if not restaurant[is_closed]:\n",
     "            new.append(restaurant)\n",
     "        \n",
