--- a/index.ipynb
+++ b/index.ipynb
@@ -284,22 +284,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 7)",
+     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 4)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    return new\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    if not restaurant[is_closed]:\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
      ]
     }
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "   new = []\n",
-    "     for restaurant in restaurants:\n",
+    "       new = []\n",
+    "         for restaurant in restaurants:\n",
     "        if not restaurant[is_closed]:\n",
     "            new.append(restaurant)\n",
     "        \n",
