Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -303,7 +303,7 @@
     "def open_restaurants(restaurants):\n",
     "    new = []\n",
     "for restaurant in restaurants:\n",
-    "    if not restaurant[is_closed]:\n",
+    "    if not restaurant[is_closed']:\n",
     "            new.append(restaurant)\n",
     "        \n",
     "return new\n",
