--- a/index.ipynb
+++ b/index.ipynb
@@ -301,10 +301,10 @@
    ],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    new =[]\n",
+    "    open =[]\n",
     "for restaurant in restaurants:\n",
     "    if not restaurant['is_closed']:\n",
-    "            new.append(restaurant)\n",
+    "            neappend(restaurant)\n",
     "        \n",
     "return new\n",
     "    "
