--- a/index.ipynb
+++ b/index.ipynb
@@ -304,9 +304,9 @@
     "    open =[]\n",
     "for restaurant in restaurants:\n",
     "    if not restaurant['is_closed']:\n",
-    "            neappend(restaurant)\n",
+    "            open.append(restaurant)\n",
     "        \n",
-    "return new\n",
+    "return op\n",
     "    "
    ]
   },
